<resources>
    <string name="app_icon_name">RUSA</string>
    <!--<string name="app_name">राष्ट्रीय उच्चतर शिक्षा अभियान</string>-->
    <string name="app_name">Rashtriya Uchchatar Shiksha Abhiyan</string>
    <string name="str_title">Rashtriya Uchchatar Shiksha Abhiyan (RUSA)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="edittext_hint"><font size="14">User Name</font></string>

    <string name="strLanguageChoose">Select language</string>
    <string name="strMenuLanguage">Language</string>
    <string-array name="lauguage">
        <item>English</item>
        <item>मराठी</item>
    </string-array>

    <string name="str_settings">Settings</string>
    <string name="str_login">Login</string>
    <string name="str_notification">Notification</string>

    <string name="str_latest_news">Updates</string>
    <string name="str_videos">Videos</string>
    <string name="str_testimonial">Testimonials</string>
    <string name="str_company">Important Links</string>
    <string name="str_twitter">Twitter</string>
    <string name="str_facebook">Facebook</string>

    <string name="str_home">Home</string>
    <string name="str_about_us">About Us</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_news">News</string>
    <string name="str_contact">Contact</string>


    <string name="str_rashtriya_uchchatar">Rashtriya Uchchatar</string>
    <string name="str_shiksha_abhiyan">Shiksha Abhiyan</string>
    <string name="str_goverment_of_maharashtra">Goverment Of Maharashtra</string>
    <string name="str_login_page">:LOGIN:</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="str_sign_up_now">Sign Up Now</string>
    <string name="str_skip_login">Skip Login</string>
    <string name="str_registration">:REGISTRATION:</string>
    <string name="str_name">Full Name *</string>
    <string name="str_aishe_code">AISHE Code</string>
    <string name="str_college_name">College Name *</string>
    <string name="str_university_affiliated">University Affiliated *</string>
    <string name="str_designation_of_the_authorized_person">Designation of Person *</string>
    <string name="str_name_of_department">Name of Department *</string>
    <string name="str_name_of_the_authorized_person">Name of the authorized person *</string>
    <string name="str_mobile_number">Mobile No. *</string>
    <string name="str_date_of_birth">Date Of Birth *</string>
    <string name="str_email">Email-ID *</string>
    <string name="str_alternet_email">Alternet Email-ID</string>
    <string name="str_create_an_account">Create an account</string>
    <string name="str_already_a_user">Already a user ?</string>
    <string name="str_sign_in_now">Sign In Now</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_submit">Submit</string>
    <string name="str_resend_otp">Resend OTP</string>
    <string name="str_full_name">Full Name *</string>
    <string name="str_university_name">University Name</string>
    <string name="str_institute_name">Institute Name</string>
    <string name="str_apply">APPLY</string>
    <string name="str_news_and_notification">News And Notification</string>
    <string name="str_connection_text">We are unable to connect to the server. Please check your connectivity or try again later</string>
    <string name="str_connection_heading">Error</string>
    <string name="str_select_university">Select University *</string>
    <string name="str_select_institute">Select Institute *</string>
    <string name="str_register">Register</string>
    <string name="str_authorized_person_name">Authorized Person Name *</string>

    <string name="str_event_and_workshop">Event and Workshop</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_upload_document">Upload Document</string>
    <string name="str_logout">Logout</string>
    <string name="str_previous_event">Previous Events</string>
    <string name="str_upcoming_event">Upcoming Events</string>
    <string name="str_change_passs">Change Password</string>

    <string name="str_no_record_found">No Records Found</string>
    <string name="str_doc_name">Document Name *</string>
    <string name="str_select_type">Select Type *</string>
    <string name="str_select_doc">Select Document *</string>
    <string name="str_browse">Browse</string>
    <string name="str_upload">Upload</string>
    <string name="str_uploaded_docs">Uploaded Documents</string>
    <string name="str_address">State Project Directorate (SPD), Rashtriya Uchchatar Shiksha Abhiyan (RUSA) Maharashtra, 18th Floor, Centre 1, World Trade Centre, Cuffe Parade, Colaba, Mumbai - 400005.
Email Id: spdrusamah@gmail.com
Contact no: 022-22160959</string>

    <string name="str_query">Query</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_your_name">Your Name</string>
    <string name="str_name1">Name</string>
    <string name="str_your_email">Your Email</string>
    <string name="str_email1">Email</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_your_message">Your Message</string>
    <string name="str_message">Message</string>
    <string name="str_send">Send</string>




</resources>
