<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@drawable/login_bg">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_new"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorBlue"
                android:fontFamily="@font/lato_bold"
                android:text="@string/str_rashtriya_uchchatar"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_large"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/colorBlue"
                android:text="@string/str_shiksha_abhiyan"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/colorRed"
                android:text="@string/str_goverment_of_maharashtra"
                android:gravity="center"
                />

            <!--android:drawableRight="@drawable/name_icon"-->
            <EditText
                android:id="@+id/ed_verifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium"
                android:fontFamily="@font/lato_regular"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="@dimen/margin_xx_large"
                android:inputType="number"
                android:hint="@string/str_enter_otp"
                android:background="@drawable/edittext_background"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_xx_large"
                android:padding="@dimen/margin_small"
                android:textSize="@dimen/text_large"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:text="@string/str_submit"
                />

            <Button
                android:id="@+id/btn_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_xx_large"
                android:padding="@dimen/margin_small"
                android:textSize="@dimen/text_large"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/button_background"
                android:textColor="@color/colorWhite"
                android:text="@string/str_resend_otp"
                />
        </LinearLayout>
</RelativeLayout>