<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".fragment.UploadDocumentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_marginBottom="@dimen/margin_x_large"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/str_upload_document"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_large" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_doc_name"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:text="@string/str_select_type" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:background="@drawable/spinner_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:text="@string/str_select_doc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="7dp"
            android:layout_marginRight="@dimen/margin_x_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBrowse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_button"
                android:padding="10dp"
                android:text="@string/str_browse"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:layout_marginBottom="@dimen/margin_xx_large"
            android:background="@drawable/contact_button_background"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/margin_small"
            android:text="@string/str_upload"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:fontFamily="@font/lato_bold"
            android:text="@string/str_uploaded_docs"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>