<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg"
    tools:context=".activity.UnivAndInstRegActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:src="@drawable/logo_new" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/str_rashtriya_uchchatar"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/str_shiksha_abhiyan"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/str_goverment_of_maharashtra"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/str_registration"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlCode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"

                android:gravity="bottom"
                android:visibility="visible"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_x_large"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/str_aishe_code"
                    android:inputType="text"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:padding="@dimen/margin_medium"
                    android:singleLine="true"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edUniName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_university_name"
                android:inputType="none"
                android:editable="false"
                android:enabled="false"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edInstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_institute_name"
                android:inputType="none"
                android:editable="false"
                android:enabled="false"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_authorized_person_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlDesg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edDesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_designation_of_the_authorized_person"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:singleLine="true"
                android:visibility="visible" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlDept"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edDept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_name_of_department"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlMobile"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlAlterEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_x_large"
            android:gravity="bottom"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edAlterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_alternet_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:layout_marginBottom="@dimen/margin_xx_large"
            android:background="@drawable/button_background"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/margin_small"
            android:text="@string/str_register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_medium" />


    </LinearLayout>

</ScrollView>