<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:layout_gravity="center"
            android:src="@drawable/logo_new"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/colorBlue"
            android:fontFamily="@font/lato_bold"
            android:text="@string/str_rashtriya_uchchatar"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorBlue"
            android:text="@string/str_shiksha_abhiyan"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorRed"
            android:text="@string/str_goverment_of_maharashtra"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorBlue"
            android:text="Forgot Password"
            android:layout_marginTop="@dimen/margin_x_large"
            android:gravity="center"/>

        <EditText
            android:id="@+id/ed_userEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableRight="@drawable/username_icon"
            android:fontFamily="@font/lato_regular"
            android:maxLines="1"
            android:padding="@dimen/margin_small"
            android:singleLine="true"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:background="@drawable/edittext_background"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginRight="@dimen/margin_x_large"/>

        <EditText
            android:id="@+id/ed_phoneNo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableRight="@drawable/phone_icon"
            android:padding="@dimen/margin_small"
            android:fontFamily="@font/lato_regular"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="@dimen/margin_x_large"
            android:inputType="number"
            android:hint="Phone Number"
            android:background="@drawable/edittext_background"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginRight="@dimen/margin_x_large"/>


        <Button
            android:id="@+id/btn_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_x_large"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:padding="5dp"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_large"
            android:text="Reset Password"
            />

        <TextView
            android:id="@+id/tv_backToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Back to Login"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/colorRed"/>

    </LinearLayout>
</RelativeLayout>